# flask_course

./: app.db  config.py  pyproject.toml  run.py
app/: __init__.py  models.py  routes.py
app/templates/: login.html
migrations/versions/: 1296c004a66f_users_table.py  7e1c51f19629_posts_table.py
