[tool.poetry]
name = "flask_course"
version = "0.1.0"
description = ""
authors = ["Jan-Joris Devogelaer <jjdevogelaer@crunchanalytics.be>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
Flask-WTF = "^1.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
